// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ContentPackParameterList /> should render with empty parameters with readOnly 1`] = `
<div>
  <h2>
    Parameters list
  </h2>
  <br />
  <div>
    <div
      className="row "
    >
      <div
        className="col-md-12"
      >
        <div
          className="data-table table-responsive"
          id="parameter-list"
        >
          <p>
            To use parameters for content packs, at first a parameter must be created and can then be applied to a entity.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ContentPackParameterList /> should render with empty parameters without readOnly 1`] = `
<div>
  <h2>
    Parameters list
  </h2>
  <br />
  <span>
    <button
      className="btn btn-sm btn-info"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Create parameter
    </button>
  </span>
  <span>
    <br />
    <br />
  </span>
  <div>
    <div
      className="row "
    >
      <div
        className="col-md-12"
      >
        <div
          className="data-table table-responsive"
          id="parameter-list"
        >
          <p>
            To use parameters for content packs, at first a parameter must be created and can then be applied to a entity.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ContentPackParameterList /> should render with parameters with readOnly 1`] = `
<div>
  <h2>
    Parameters list
  </h2>
  <br />
  <div>
    <div
      className="row "
    >
      <div
        className="col-md-12"
      >
        <div
          className="data-table table-responsive"
          id="parameter-list"
        >
          <table
            className="table undefined"
          >
            <thead>
              <tr>
                <th>
                  Title
                </th>
                <th>
                  Name
                </th>
                <th>
                  Description
                </th>
                <th>
                  Value Type
                </th>
                <th>
                  Default Value
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td>
                  A parameter title
                </td>
                <td>
                  A parameter name
                </td>
                <td>
                  A parameter descriptions
                </td>
                <td>
                  string
                </td>
                <td>
                  test
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ContentPackParameterList /> should render with parameters without readOnly 1`] = `
<div>
  <h2>
    Parameters list
  </h2>
  <br />
  <span>
    <button
      className="btn btn-sm btn-info"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Create parameter
    </button>
  </span>
  <span>
    <br />
    <br />
  </span>
  <div>
    <div
      className="row "
    >
      <div
        className="col-md-12"
      >
        <div
          className="data-table table-responsive"
          id="parameter-list"
        >
          <table
            className="table undefined"
          >
            <thead>
              <tr>
                <th>
                  Title
                </th>
                <th>
                  Name
                </th>
                <th>
                  Description
                </th>
                <th>
                  Value Type
                </th>
                <th>
                  Default Value
                </th>
                <th>
                  Action
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td>
                  A parameter title
                </td>
                <td>
                  A parameter name
                </td>
                <td>
                  A parameter descriptions
                </td>
                <td>
                  string
                </td>
                <td>
                  test
                </td>
                <td>
                  <button
                    className="btn btn-sm btn-primary"
                    disabled={false}
                    onClick={[Function]}
                    type="button"
                  >
                    Delete
                  </button>
                  <span>
                    <button
                      className="btn btn-sm btn-info"
                      disabled={false}
                      onClick={[Function]}
                      type="button"
                    >
                      Edit
                    </button>
                  </span>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;
